plang/testing/logs/false-incorrect/83/program83.p.p
v3cd (t5i8 (Oxa) kDcH GKrij) (D) :- npmZG; qsn sglhe (gb mi (Q) (CsLBq) r5qti), tsH, n f3; bxUX1 t2 lc5zm Fz (QaRHc); v, uED uagM yD (Dl) (rUg).
jWFA9 L (da h4JtY ht (Q2d)) :- (lu7K w (P) (SOvXd) drVr); ph (D).
zC U :- (fmA (ANMj) A; gVZ5B (Ck), f5 (LY); pUV (lkIZ B4sh (jZ8 (kgC WLS TSY) oI O2 (omP (sEHRD (tpoSM) (y4 XY6) (EFo) (R)) (hT8rh) QH6 (vyQ))) W8Dg) (J); (vsDBv (Yo) (cV hFCi (Eo) pEjbI), j b (O) lR), u (u (b4 rtv k (fMV (Wpobh) zt j) (gRTps)))).
ebg r2c :- luQ1, a cjrU c2cR, aXBTM; f6W (L9W) (Cd6Ly) (s (EMF) JOU), (lG (Cx1) (e3 jd (a Cicm (OBymZ) (H)) RfLR) NsNe7; n c3pf (ic (Yr) (o47 MF) aS QJtsD), (v)); (fcC2, rkE q2J0 fSlN1; qHe5Q UGCl HL; lhK (FcjTD) (Q2ugn) U3hF (ZsYu)); ((rcjr a (MO) (pV7 (MZQI) EJnM3)), yq1 i (bJ) kE Ke).


b5 (tZyCW (wiIDK uKEZ) (W6A) Ap (UEv)) Uc (Xc) OWP.

u (E6IM) nn (L6gm3) y0af :- dNV (Pm) Ulrv b3m eX3H.


? z; b WS (e (jPrl (S5J8) (Qx9bm)) sUE (Lc3Z) (Lwo)) (Z4gN) AG6, pHL0, n Qyjf; q (pL S OamEX) VET1o, ((f5y vb)), tlc vnyd F.


